# evmbench-certora-agent-harness

./: .gitignore  00_Experiment-Charter.md  01_Thought-Log.md  02_Run-Plan.md  03_Local-Mini-Validation.md  04_Wider-Scope-Run.md  05_Experiment-Design.md  README.md  pyproject.toml
configs/: harness.curves-security.local.yaml  harness.example.yaml
examples/sample_challenge/: README.md  certora.conf
examples/sample_challenge/contracts/: Vault.sol
examples/sample_challenge/specs/: AutoSpec.cvl
prompts/: system_prompt.curves-security.md  system_prompt.md
scripts/: fetch_evmbench.sh
src/evmbench_certora_harness/: __init__.py  agent.py  certora.py  cli.py  config.py  context_builder.py  llm.py
tests/: test_smoke.py
